fixing some references

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                     <div class="why-reason fragment">
                         <i class="fas fa-users"></i>
                         <h3>The People & Culture</h3>
-                        <p>Through my sister's leadership role at SpaceX, I've witnessed the incredible drive and dedication of the team - brilliant minds united by a singular mission, working relentlessly to solve impossible problems</p>
+                        <p>Through interactions with SpaceX engineers and attending space industry events, I've witnessed the incredible drive and dedication of the team - brilliant minds united by a singular mission, working relentlessly to solve impossible problems</p>
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-rocket"></i>
