updating index and presentation to fix numerical values

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <span class="tech-badge">LangGraph</span>
                         <span class="tech-badge">RAG</span>
                         <span class="tech-badge">pgvector</span>
-                        <span class="tech-badge">SQL Generation</span>
+                        <span class="tech-badge">Multimodal AI</span>
                         <span class="tech-badge">Fine-tuning</span>
                     </div>
                     <div class="presenter-info animate-fade-in-delayed-2">
@@ -52,8 +52,8 @@
                             <span class="metric-label">Hours Saved</span>
                         </div>
                         <div class="metric">
-                            <span class="metric-value">100+</span>
-                            <span class="metric-label">Companies Supported</span>
+                            <span class="metric-value">$3M+</span>
+                            <span class="metric-label">Additional Contract Funding</span>
                         </div>
                     </div>
                 </div>
@@ -272,19 +272,19 @@
                     </div>
                     <div class="eval-metrics">
                         <div class="metric-card fragment">
-                            <h4>AI Judges</h4>
-                            <p>LLM-as-judge evaluation with rubric scoring</p>
-                            <span class="metric-score">95% Agreement</span>
+                            <h4>LLM-as-Judge Framework</h4>
+                            <p>Automated model evaluation for generative tasks with structured rubrics</p>
+                            <span class="metric-score">Enables Small Model Fine-tuning</span>
                         </div>
                         <div class="metric-card fragment">
-                            <h4>SQL Accuracy</h4>
-                            <p>Automated SQL query validation</p>
-                            <span class="metric-score">92% Success</span>
+                            <h4>Model Performance Gains</h4>
+                            <p>3B model fine-tuned to match 32B baseline performance</p>
+                            <span class="metric-score">50x Memory Reduction</span>
                         </div>
                         <div class="metric-card fragment">
-                            <h4>Retrieval Quality</h4>
-                            <p>Precision & Recall metrics</p>
-                            <span class="metric-score">0.89 F1 Score</span>
+                            <h4>Retrieval Evaluation</h4>
+                            <p>Dataset generation agent creates evaluation sets for embedding comparison</p>
+                            <span class="metric-score">15% Precision/Recall Gains</span>
                         </div>
                     </div>
                 </div>
@@ -390,7 +390,7 @@
                         <div class="challenge-body">
                             <p><strong>Problem:</strong> Generic benchmarks didn't reflect our use case performance</p>
                             <p><strong>Solution:</strong> Built custom evaluation framework for domain-specific testing</p>
-                            <p class="impact">Impact: Identified optimal model (7B vs 70B trade-off)</p>
+                            <p class="impact">Impact: Identified optimal model (3B vs 32B trade-off)</p>
                         </div>
                     </div>
                     <div class="challenge-item fragment">
@@ -428,18 +428,18 @@
                             <span class="result-icon">💰</span>
                             <div class="result-content">
                                 <h4>Cost Savings</h4>
-                                <p class="before">Before: $50K/event</p>
-                                <p class="after">After: $500 compute</p>
-                                <span class="improvement">99% reduction</span>
+                                <p class="before">Before: 100+ hours @ $50/hr</p>
+                                <p class="after">After: 2 hours + $500 compute</p>
+                                <span class="improvement">95% labor reduction</span>
                             </div>
                         </div>
                         <div class="result-item fragment">
                             <span class="result-icon">📈</span>
                             <div class="result-content">
                                 <h4>Scale</h4>
-                                <p class="before">Before: 1 event/month</p>
-                                <p class="after">After: 10+ events/month</p>
-                                <span class="improvement">10x capacity</span>
+                                <p class="before">Before: 1 event/year</p>
+                                <p class="after">After: 2-3 events/year, 3x participants</p>
+                                <span class="improvement">9x total capacity</span>
                             </div>
                         </div>
                     </div>
@@ -512,7 +512,7 @@
                         <div class="lesson-icon">📏</div>
                         <h3>Measure Everything</h3>
                         <p>Custom benchmarks > generic benchmarks. Build evaluation before optimization.</p>
-                        <div class="lesson-impact">→ Found 7B > 70B for our use case</div>
+                        <div class="lesson-impact">→ Found 3B > 32B for our use case</div>
                     </div>
                     <div class="lesson-card fragment">
                         <div class="lesson-icon">🎭</div>
@@ -536,7 +536,7 @@
                     <div class="why-reason fragment">
                         <i class="fas fa-users"></i>
                         <h3>The People & Culture</h3>
-                        <p>Through interactions with SpaceX engineers and attending space industry events, I've witnessed the incredible drive and dedication of the team - brilliant minds united by a singular mission, working relentlessly to solve impossible problems</p>
+                        <p>Over the years, I've gotten to know several SpaceX engineers through my sister who's a manager at the Hawthorne location. What I love most is how driven everyone is to a singular goal - it's rare to find a company where everyone is soul-set on their mission. That culture is inspiring and amazing.</p>
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-rocket"></i>
@@ -545,8 +545,8 @@
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-brain"></i>
-                        <h3>AI at the Frontier</h3>
-                        <p>The opportunity to bring AI to the forefront of space exploration - from Starlink constellation management to launch optimization - is the ultimate technical challenge</p>
+                        <h3>AI for Vehicle Engineering</h3>
+                        <p>The opportunity to bring AI to Falcon 9 and Starship development - from flight data analysis to rapid design iteration - represents the ultimate technical challenge in aerospace</p>
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-fire"></i>
