updating index to mention resource contraints

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <span class="gradient-text">SIDEKICK AI</span>
                     </h1>
                     <h3 class="subtitle animate-slide-up">
-                        Building an Extensible Multi-Agent System for Military Logistics
+                        Fast AI on Limited Resources: Multi-Agent System for Military Logistics
                     </h3>
                     <div class="tech-stack animate-fade-in-delayed">
                         <span class="tech-badge">LangGraph</span>
@@ -113,8 +113,8 @@
                     </div>
                 </div>
                 <div class="solution-statement fragment">
-                    <h3>Our Solution: AI-Powered Automation</h3>
-                    <p>Eliminating the single point of failure through intelligent document processing and multi-agent orchestration</p>
+                    <h3>Our Solution: Fast AI on Limited Resources</h3>
+                    <p>Solo AI engineer delivering production system in 3 months on primitive military hardware through aggressive optimization and rapid iteration</p>
                 </div>
             </section>
 
@@ -292,7 +292,7 @@
 
             <!-- Slide 9: Technical Implementation -->
             <section id="technical-code">
-                <h2>Technical Implementation Highlights</h2>
+                <h2>Technical Implementation: Optimized for Speed & Constraints</h2>
                 <div class="code-showcase">
                     <div class="code-tabs">
                         <button class="tab-btn active" onclick="showCodeTab('agent')">Agent Orchestration</button>
@@ -302,6 +302,7 @@
                     <div id="agent-code" class="code-content">
                         <pre><code class="language-python">class GeneratorAgent:
     def __init__(self, model_manager):
+        # 3B fine-tuned model - optimized for 16GB VRAM constraint
         self.model = model_manager.get_model("generator")
         self.retriever = DocumentRetriever(hybrid=True)
         self.auditor = AuditorAgent()
@@ -373,13 +374,24 @@
                 <div class="challenges-grid">
                     <div class="challenge-item fragment">
                         <div class="challenge-header">
-                            <i class="fas fa-exclamation-triangle"></i>
-                            <h3>Challenge: CI/CD Integration</h3>
+                            <i class="fas fa-bolt"></i>
+                            <h3>Challenge: Extreme Resource Constraints</h3>
                         </div>
                         <div class="challenge-body">
-                            <p><strong>Problem:</strong> Initially focused too much on backend without frontend integration</p>
-                            <p><strong>Solution:</strong> Implemented full-stack CI/CD pipeline with Docker containerization</p>
-                            <p class="impact">Impact: 10x faster iteration cycles</p>
+                            <p><strong>Problem:</strong> Sole AI engineer, primitive military hardware (16GB VRAM), tight timeline</p>
+                            <p><strong>Solution:</strong> 3B fine-tuned models + aggressive optimization + customer demos for hardware upgrades</p>
+                            <p class="impact">Impact: Delivered full system on 16GB RAM laptop</p>
+                        </div>
+                    </div>
+                    <div class="challenge-item fragment">
+                        <div class="challenge-header">
+                            <i class="fas fa-clock"></i>
+                            <h3>Challenge: Speed to Market</h3>
+                        </div>
+                        <div class="challenge-body">
+                            <p><strong>Problem:</strong> Customer needed immediate solution, couldn't wait for perfect architecture</p>
+                            <p><strong>Solution:</strong> Rapid prototyping with LangGraph + iterative demos to prove value</p>
+                            <p class="impact">Impact: MVP deployed in 6 weeks, full system in 3 months</p>
                         </div>
                     </div>
                     <div class="challenge-item fragment">
@@ -503,10 +515,10 @@
                 <h2>Key Lessons Learned</h2>
                 <div class="lessons-grid">
                     <div class="lesson-card fragment">
-                        <div class="lesson-icon">🔄</div>
-                        <h3>CI/CD First</h3>
-                        <p>Start with end-to-end pipeline, not just backend. Quick prototypes beat perfect architecture.</p>
-                        <div class="lesson-impact">→ 10x faster iteration</div>
+                        <div class="lesson-icon">⚡</div>
+                        <h3>Speed Beats Perfect</h3>
+                        <p>Working solution on limited hardware > perfect architecture on ideal setup. Ship fast, iterate faster.</p>
+                        <div class="lesson-impact">→ MVP in 6 weeks vs 6 months</div>
                     </div>
                     <div class="lesson-card fragment">
                         <div class="lesson-icon">📏</div>
@@ -515,10 +527,10 @@
                         <div class="lesson-impact">→ Found 3B > 32B for our use case</div>
                     </div>
                     <div class="lesson-card fragment">
-                        <div class="lesson-icon">🎭</div>
-                        <h3>Show, Don't Tell</h3>
-                        <p>Frontend demos get stakeholder buy-in. Backend excellence needs visible results.</p>
-                        <div class="lesson-impact">→ Secured 3x budget increase</div>
+                        <div class="lesson-icon">💻</div>
+                        <h3>Constraints Drive Innovation</h3>
+                        <p>16GB RAM laptop forced aggressive optimization. Resource limits lead to creative solutions.</p>
+                        <div class="lesson-impact">→ 50x more efficient than baseline</div>
                     </div>
                     <div class="lesson-card fragment">
                         <div class="lesson-icon">🧩</div>
@@ -540,8 +552,8 @@
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-rocket"></i>
-                        <h3>Mission-Driven Purpose</h3>
-                        <p>Making humanity multiplanetary isn't just ambitious - it's necessary. When challenges arise (and they will), believing in this mission is what drives us to overcome them</p>
+                        <h3>Speed & Innovation Culture</h3>
+                        <p>SpaceX's relentless pace and "fail fast, learn faster" approach matches my style. I thrive in environments where you ship quickly, iterate rapidly, and make impossible deadlines happen</p>
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-brain"></i>
@@ -550,8 +562,8 @@
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-fire"></i>
-                        <h3>Hustle Culture</h3>
-                        <p>SpaceX's relentless pace matches my approach - I thrive in high-intensity environments where rapid iteration and bold decisions lead to breakthrough results</p>
+                        <h3>AI Pioneer in Space</h3>
+                        <p>The opportunity to be among the first to bring AI to space engineering is inspiring. Getting the ball rolling on AI in the space field while going fast and breaking things - that's the future</p>
                     </div>
                 </div>
                 <div class="closing-statement fragment">
