removing a challenge block

--- a/index.html
+++ b/index.html
@@ -397,17 +397,6 @@
                     <div class="challenge-item fragment">
                         <div class="challenge-header">
                             <i class="fas fa-exclamation-triangle"></i>
-                            <h3>Challenge: Model Selection</h3>
-                        </div>
-                        <div class="challenge-body">
-                            <p><strong>Problem:</strong> Generic benchmarks didn't reflect our use case performance</p>
-                            <p><strong>Solution:</strong> Built custom evaluation framework for domain-specific testing</p>
-                            <p class="impact">Impact: Identified optimal model (3B vs 32B trade-off)</p>
-                        </div>
-                    </div>
-                    <div class="challenge-item fragment">
-                        <div class="challenge-header">
-                            <i class="fas fa-exclamation-triangle"></i>
                             <h3>Challenge: Scale & Latency</h3>
                         </div>
                         <div class="challenge-body">
@@ -548,7 +537,7 @@
                     <div class="why-reason fragment">
                         <i class="fas fa-users"></i>
                         <h3>The People & Culture</h3>
-                        <p>Over the years, I've gotten to know several SpaceX engineers through my sister who's a manager at the Hawthorne location. What I love most is how driven everyone is to a singular goal - it's rare to find a company where everyone is soul-set on their mission. That culture is inspiring and amazing.</p>
+                        <p>Through SpaceX engineers I've met, I've witnessed how driven everyone is to a singular goal. It's rare to find a company where everyone is soul-set on their mission - that culture is inspiring.</p>
                     </div>
                     <div class="why-reason fragment">
                         <i class="fas fa-rocket"></i>
