fixing overlapping text bug

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <span class="gradient-text">SIDEKICK AI</span>
                     </h1>
                     <h3 class="subtitle animate-slide-up">
-                        Fast AI on Limited Resources: Multi-Agent System for Military Logistics
+                        Multi-Agent System for Military Logistics
                     </h3>
                     <div class="tech-stack animate-fade-in-delayed">
                         <span class="tech-badge">LangGraph</span>
@@ -522,10 +522,10 @@
                         <div class="lesson-impact">→ 50x more efficient than baseline</div>
                     </div>
                     <div class="lesson-card fragment">
-                        <div class="lesson-icon">🧩</div>
-                        <h3>Modular > Monolithic</h3>
-                        <p>Specialized agents beat one large model. Parallel processing changes everything.</p>
-                        <div class="lesson-impact">→ 400% performance gain</div>
+                        <div class="lesson-icon">🔄</div>
+                        <h3>CI/CD First</h3>
+                        <p>Every backend feature needs a frontend demo. Constant deployment shows stakeholders real progress and builds trust.</p>
+                        <div class="lesson-impact">→ Secured 3x budget increase</div>
                     </div>
                 </div>
             </section>
