--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
             <!-- Slide 7: Document Processing Pipeline -->
             <section id="document-processing">
-                <h2>Multimodal Document Processing</h2>
+                <h2>Document Classification System</h2>
                 <div class="processing-pipeline">
                     <div id="doc-pipeline-viz"></div>
                 </div>
