fix: Attempting to fix overlapping text

--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
                     </div>
                     <div class="impact-metrics animate-pulse">
                         <div class="metric">
-                            <span class="metric-value">5 Min</span>
-                            <span class="metric-label">End-to-End Processing</span>
-                            <span class="metric-detail">1000+ docs analyzed, classified & queryable</span>
+                            <span class="metric-value">99%</span>
+                            <span class="metric-label">Accuracy</span>
                         </div>
                         <div class="metric">
                             <span class="metric-value">1000s</span>
@@ -54,7 +53,7 @@
                         </div>
                         <div class="metric">
                             <span class="metric-value">$3M+</span>
-                            <span class="metric-label">Additional Contract Funding</span>
+                            <span class="metric-label">Contracts Secured</span>
                         </div>
                     </div>
                 </div>
