--- a/index.html
+++ b/index.html
@@ -147,16 +147,19 @@
             <!-- Slide 5: RAG Pipeline -->
             <section id="rag-pipeline">
                 <h2>Advanced RAG Pipeline with Hybrid Search</h2>
-                <div class="rag-visualization" style="display: flex; gap: 30px; align-items: flex-start;">
-                    <div style="flex: 1;">
-                        <svg id="rag-flow" width="100%" height="450"></svg>
+                <div class="rag-visualization">
+                    <div style="display: flex; gap: 20px; align-items: center; margin-bottom: 20px;">
+                        <div style="flex: 1;">
+                            <svg id="rag-flow" width="100%" height="300"></svg>
+                        </div>
+                        <div style="flex: 1; text-align: center;">
+                            <img src="hybrid_search.png" alt="Hybrid Search Architecture" style="width: 100%; max-width: 400px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
+                            <p style="font-size: 0.5em; color: #888; margin-top: 8px;">Dense + Sparse Embeddings with Cohere Reranking</p>
+                        </div>
                     </div>
-                    <div style="flex: 1; max-width: 500px;">
-                        <img src="hybrid_search.png" alt="Hybrid Search Architecture" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3); margin-top: 20px;">
-                        <p style="font-size: 0.6em; color: #888; text-align: center; margin-top: 10px;">Hybrid Search: Dense + Sparse Embeddings with Cohere Reranking</p>
-                    </div>
+                    <div id="sql-generator-flow"></div>
                 </div>
-                <div class="rag-features" style="margin-top: 20px;">
+                <div class="rag-features">
                     <div class="feature-item fragment">
                         <i class="fas fa-database"></i>
                         <span>PostgreSQL + pgvector for embeddings</span>
