--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <svg id="rag-flow" width="100%" height="300"></svg>
                         </div>
                         <div style="flex: 1; text-align: center;">
-                            <img src="hybrid_search.png" alt="Hybrid Search Architecture" style="width: 100%; max-width: 400px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
+                            <img src="./hybrid_search.png" alt="Hybrid Search Architecture" style="width: 100%; max-width: 400px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
                             <p style="font-size: 0.5em; color: #888; margin-top: 8px;">Dense + Sparse Embeddings with Cohere Reranking</p>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                 <div class="processing-pipeline">
                     <div style="display: flex; align-items: center; gap: 30px;">
                         <div style="flex: 1;">
-                            <img src="dolphin.png" alt="Dolphin Multimodal AI Architecture" style="width: 100%; max-width: 500px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
+                            <img src="./dolphin.png" alt="Dolphin Multimodal AI Architecture" style="width: 100%; max-width: 500px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
                             <p style="font-size: 0.6em; color: #888; text-align: center; margin-top: 10px;">Dolphin: Swin Transformer + Cross-Attention for multimodal document understanding</p>
                         </div>
                         <div style="flex: 1;">
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                     <div style="flex: 1; margin-top: 40px;">
-                        <img src="multi-modal-rag.png" alt="Multimodal RAG Architecture" style="width: 100%; max-width: 400px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
+                        <img src="./multi-modal-rag.png" alt="Multimodal RAG Architecture" style="width: 100%; max-width: 400px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
                         <p style="font-size: 0.6em; color: #888; text-align: center; margin-top: 10px;">Multimodal RAG: Processing text, tables, images, and diagrams from military documents</p>
                     </div>
                 </div>
