setting static svg viewbox

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             <!-- Slide 5: RAG Pipeline -->
             <section id="rag-pipeline">
                 <h2 style="margin-bottom: 10px; font-size: 1.3em; margin-top: 10px;">SQL Code Generator Agent Pipeline</h2>
-                <div class="rag-visualization" style="margin-top: 5px;">
-                    <div id="sql-generator-dynamic"></div>
+                <div class="rag-visualization" style="margin-top: 5px; height: 600px;">
+                    <div id="sql-generator-dynamic" style="height: 100%; width: 100%;"></div>
                 </div>
                 <div class="rag-features">
                     <div class="feature-item fragment">
