removin built solo preface

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="presenter-info animate-fade-in-delayed-2">
                         <h4>Brian Ellis</h4>
                         <p>AI Software Engineer | Secret Clearance</p>
-                        <p class="date">Built solo in 3 months (May-July 2024)</p>
+                        <p class="date">August 2025</p>
                     </div>
                     <div class="impact-metrics animate-pulse">
                         <div class="metric">
