fixing some selfish phrasing

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             <!-- Slide 4: All Challenges Overview -->
             <section id="challenges-overview">
-                <h2>The 4 Core Challenges I Solved</h2>
+                <h2>The 4 Core Challenges</h2>
                 <div class="solution-statement" style="margin-bottom: 20px;">
                     <p>Each required a different technical approach - here's what I built</p>
                 </div>
@@ -129,22 +129,22 @@
                     <div class="challenge-item" style="background: rgba(102, 126, 234, 0.05); border: 1px solid #667eea; border-radius: 10px; padding: 20px;">
                         <h3 style="color: #667eea; margin-bottom: 10px;">1. Structured Data at Scale</h3>
                         <p style="font-size: 0.8em; margin-bottom: 8px;"><strong>Problem:</strong> Excel with 1000s rows, LLMs hallucinate</p>
-                        <p style="font-size: 0.8em; color: #00ff88;"><strong>I built:</strong> SQL Generator Agent</p>
+                        <p style="font-size: 0.8em; color: #00ff88;"><strong>Solution:</strong> SQL Generator Agent</p>
                     </div>
                     <div class="challenge-item" style="background: rgba(118, 75, 162, 0.05); border: 1px solid #764ba2; border-radius: 10px; padding: 20px;">
                         <h3 style="color: #764ba2; margin-bottom: 10px;">2. Complex Documents</h3>
                         <p style="font-size: 0.8em; margin-bottom: 8px;"><strong>Problem:</strong> Lost 60% info in diagrams/tables</p>
-                        <p style="font-size: 0.8em; color: #00ff88;"><strong>I built:</strong> Multimodal Processing</p>
+                        <p style="font-size: 0.8em; color: #00ff88;"><strong>Solution:</strong> Multimodal Processing</p>
                     </div>
                     <div class="challenge-item" style="background: rgba(255, 107, 53, 0.05); border: 1px solid #ff6b35; border-radius: 10px; padding: 20px;">
                         <h3 style="color: #ff6b35; margin-bottom: 10px;">3. Retrieval Accuracy</h3>
                         <p style="font-size: 0.8em; margin-bottom: 8px;"><strong>Problem:</strong> Semantic vs keyword mismatch</p>
-                        <p style="font-size: 0.8em; color: #00ff88;"><strong>I built:</strong> Hybrid Search (15% gain)</p>
+                        <p style="font-size: 0.8em; color: #00ff88;"><strong>Solution:</strong> Hybrid Search (15% gain)</p>
                     </div>
                     <div class="challenge-item" style="background: rgba(0, 255, 136, 0.05); border: 1px solid #00ff88; border-radius: 10px; padding: 20px;">
                         <h3 style="color: #00ff88; margin-bottom: 10px;">4. Manual Processing</h3>
                         <p style="font-size: 0.8em; margin-bottom: 8px;"><strong>Problem:</strong> 70 hrs/week, no audit trail</p>
-                        <p style="font-size: 0.8em; color: #00ff88;"><strong>I built:</strong> Q&A Agent with reasoning</p>
+                        <p style="font-size: 0.8em; color: #00ff88;"><strong>Solution:</strong> Q&A Agent with reasoning</p>
                     </div>
                 </div>
             </section>
