--- a/index.html
+++ b/index.html
@@ -536,13 +536,13 @@ Operational Environments:
 
             <!-- Slide 13: Liaison Ad-hoc Question Example - MFIX 2025 Query -->
             <section id="liaison-example">
-                <h2 style="margin-bottom: 5px; font-size: 1.1em;">Real Example: Liaison's Ad-hoc MFIX 2025 Query</h2>
-                <div style="background: rgba(102, 126, 234, 0.05); border: 1px solid #667eea; border-radius: 8px; padding: 8px; margin-bottom: 10px;">
-                    <p style="font-size: 0.75em; margin: 0; color: #e0e0e0;">
+                <h2 style="margin-bottom: 15px; font-size: 1.2em;">Real Example: Liaison's Ad-hoc MFIX 2025 Query</h2>
+                <div style="background: rgba(102, 126, 234, 0.05); border: 1px solid #667eea; border-radius: 8px; padding: 12px; margin-bottom: 20px;">
+                    <p style="font-size: 0.8em; margin: 0; color: #e0e0e0;">
                         <strong style="color: #667eea;">Liaison Query:</strong> "Give me all participants from MFIX 2025 in Field Site 1 with UAS technology and their soldier counts"
                     </p>
                 </div>
-                <div id="liaison-query-flow" style="height: 85vh; width: 100%;"></div>
+                <div id="liaison-query-flow" style="height: calc(100vh - 200px); width: 100%;"></div>
             </section>
 
             <!-- Slide 14: Technical Implementation - WHY These Decisions Worked -->
