updating title slide metric

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             <span class="metric-label">Faster</span>
                         </div>
                         <div class="metric">
-                            <span class="metric-value">15K+</span>
-                            <span class="metric-label">Records Processed</span>
+                            <span class="metric-value">$3M+</span>
+                            <span class="metric-label">Additional Contracts</span>
                         </div>
                     </div>
                 </div>
