reformatting some items like arrows

--- a/index.html
+++ b/index.html
@@ -800,8 +800,8 @@ def evaluate_models(models, eval_type):
                 <div class="lessons-grid">
                     <div class="lesson-card fragment">
                         <div class="lesson-icon"></div>
-                        <h3>Speed Beats Perfect</h3>
-                        <p>Working solution on limited hardware > perfect architecture on ideal setup. Ship fast, iterate faster.</p>
+                        <h3>Build Fast, Learn Faster</h3>
+                        <p>Working solution on limited hardware taught what actually mattered. Early deployment reveals real requirements.</p>
                         <div class="lesson-impact">→ MVP in 6 weeks vs 6 months</div>
                     </div>
                     <div class="lesson-card fragment">
@@ -857,21 +857,6 @@ def evaluate_models(models, eval_type):
                         <h4 style="color: #00ff88; margin-bottom: 8px; text-align: center;">Enhanced Autonomous Landing</h4>
                         <p style="font-size: 0.75em; color: #e0e0e0; text-align: center; margin-bottom: 8px;">Next-gen vision for Starship catch tower</p>
                         <p style="font-size: 0.7em; color: #00ff88; text-align: center;"><strong>My Experience:</strong> Multi-agent coordination → Landing systems</p>
-                    </div>
-                </div>
-                
-                <!-- Streamlined Parallels -->
-                <div style="background: rgba(0, 0, 0, 0.3); border: 1px solid #764ba2; border-radius: 10px; padding: 20px;">
-                    <h4 style="color: #764ba2; margin-bottom: 15px; text-align: center;">Direct Technical Parallels</h4>
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px;">
-                        <div style="text-align: center;">
-                            <h5 style="color: #ff6b35; margin-bottom: 10px;">My Military System</h5>
-                            <p style="color: #e0e0e0; font-size: 0.85em; line-height: 1.5;">Track 1000s of documents • Classify templates • Extract answers • 16GB RAM constraints • Parallel agent processing</p>
-                        </div>
-                        <div style="text-align: center;">
-                            <h5 style="color: #00ff88; margin-bottom: 10px;">SpaceX Applications</h5>
-                            <p style="color: #e0e0e0; font-size: 0.85em; line-height: 1.5;">Track millions of parts • Classify defects • Extract telemetry insights • Edge computing • Distributed operations</p>
-                        </div>
                     </div>
                 </div>
             </section>
