adding in qr code

--- a/index.html
+++ b/index.html
@@ -901,8 +901,8 @@ def evaluate_models(models, eval_type):
                     <p>linkedin.com/in/BEllis1997</p>
                 </div>
                 <div class="questions">
-                    <h3>Questions?</h3>
-                    <p>Let's discuss how AI can accelerate SpaceX's mission</p>
+                    <h3>Thank you for your time and attention</h3>
+                    <p>I appreciate the opportunity to share this work with you</p>
                 </div>
             </section>
         </div>
