--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="solution-statement fragment">
                     <h3>What Was Built: Fast AI on Limited Resources</h3>
-                    <p>This production system was delivered in 3 months (May-July 2024) as the sole AI engineer while peers focused on traditional solutions</p>
+                    <p>This production system was delivered in ~3 months (September-December 2024) as the sole AI engineer while peers focused on traditional solutions</p>
                 </div>
             </section>
 
