fixing delay verbiage

--- a/index.html
+++ b/index.html
@@ -808,26 +808,26 @@ def evaluate_models(models, eval_type):
                     <div class="lesson-card fragment">
                         <div class="lesson-icon"></div>
                         <h3>Build Fast, Learn Faster</h3>
-                        <p>Limited hardware taught what mattered. Early deployment reveals requirements.</p>
-                        <div class="lesson-impact">→ MVP in 6 weeks</div>
+                        <p>Working solution on limited hardware taught what actually mattered. Early deployment reveals real requirements.</p>
+                        <div class="lesson-impact">→ MVP in 6 weeks vs 6 months</div>
                     </div>
                     <div class="lesson-card fragment">
                         <div class="lesson-icon"></div>
                         <h3>Measure Everything</h3>
-                        <p>Custom benchmarks > generic. Build evaluation before optimization.</p>
-                        <div class="lesson-impact">→ Found 3B > 32B</div>
+                        <p>Custom benchmarks > generic benchmarks. Build evaluation before optimization.</p>
+                        <div class="lesson-impact">→ Found 3B > 32B for this use case</div>
                     </div>
                     <div class="lesson-card fragment">
                         <div class="lesson-icon"></div>
                         <h3>Constraints Drive Innovation</h3>
-                        <p>16GB RAM forced aggressive optimization.</p>
-                        <div class="lesson-impact">→ 1400x efficiency gain</div>
+                        <p>16GB RAM laptop forced aggressive optimization. Resource limits lead to creative solutions.</p>
+                        <div class="lesson-impact">→ 1400x more efficient than baseline</div>
                     </div>
                     <div class="lesson-card fragment">
                         <div class="lesson-icon"></div>
                         <h3>CI/CD First</h3>
-                        <p>Frontend demo for every feature. Shows real progress.</p>
-                        <div class="lesson-impact">→ 3x budget increase</div>
+                        <p>Every backend feature needs a frontend demo. Constant deployment shows stakeholders real progress and builds trust.</p>
+                        <div class="lesson-impact">→ Secured 3x budget increase</div>
                     </div>
                 </div>
             </section>
@@ -846,7 +846,7 @@ def evaluate_models(models, eval_type):
                     
                     <div style="background: rgba(255, 107, 53, 0.1); border: 1px solid #ff6b35; border-radius: 10px; padding: 15px;">
                         <h4 style="color: #ff6b35; margin-bottom: 8px; text-align: center;">Mars Mission Autonomous Agents</h4>
-                        <p style="font-size: 0.75em; color: #e0e0e0; text-align: center; margin-bottom: 8px;">8-minute delay requires onboard AI diagnostics</p>
+                        <p style="font-size: 0.75em; color: #e0e0e0; text-align: center; margin-bottom: 8px;">Communication delays require onboard AI diagnostics</p>
                         <p style="font-size: 0.7em; color: #00ff88; text-align: center;"><strong>My Experience:</strong> Air-gapped networks → Mars delays</p>
                     </div>
                     
