--- a/index.html
+++ b/index.html
@@ -575,26 +575,27 @@ Operational Environments:
 
             <!-- Slide 12: LangGraph Orchestration - THE MAIN ACTION -->
             <section id="architecture">
-                <h2 style="margin-bottom: 10px; font-size: 1.4em;">LangGraph Multi-Agent Orchestration: Bringing It All Together</h2>
-                <div class="architecture-container" style="height: 75vh;">
-                    <div id="agent-flow-diagram"></div>
+                <h2 style="margin-top: -10px; margin-bottom: 5px; font-size: 1.2em;">LangGraph Multi-Agent Orchestration</h2>
+                <div class="architecture-container" style="height: 90vh; margin-top: -5px;">
+                    <div id="agent-flow-diagram" style="height: 100%;"></div>
                 </div>
-                <div class="architecture-legend" style="font-size: 0.8em; margin-top: 10px;">
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #667eea; width: 15px; height: 15px;"></span>
-                        <span style="font-size: 0.9em;">Core Agents</span>
+                <!-- Legend moved to absolute position in corner -->
+                <div class="architecture-legend" style="position: absolute; bottom: 10px; right: 10px; font-size: 0.6em; opacity: 0.8; display: flex; gap: 15px;">
+                    <div class="legend-item" style="display: flex; align-items: center; gap: 5px;">
+                        <span class="legend-color" style="background: #667eea; width: 10px; height: 10px; display: inline-block; border-radius: 2px;"></span>
+                        <span style="font-size: 0.8em;">Core</span>
                     </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #00ff88; width: 15px; height: 15px;"></span>
-                        <span style="font-size: 0.9em;">Specialized Agents</span>
+                    <div class="legend-item" style="display: flex; align-items: center; gap: 5px;">
+                        <span class="legend-color" style="background: #00ff88; width: 10px; height: 10px; display: inline-block; border-radius: 2px;"></span>
+                        <span style="font-size: 0.8em;">Specialized</span>
                     </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #764ba2; width: 15px; height: 15px;"></span>
-                        <span style="font-size: 0.9em;">Q&A Pipeline</span>
+                    <div class="legend-item" style="display: flex; align-items: center; gap: 5px;">
+                        <span class="legend-color" style="background: #764ba2; width: 10px; height: 10px; display: inline-block; border-radius: 2px;"></span>
+                        <span style="font-size: 0.8em;">Q&A</span>
                     </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #ff6b35; width: 15px; height: 15px;"></span>
-                        <span style="font-size: 0.9em;">Tools & Resources</span>
+                    <div class="legend-item" style="display: flex; align-items: center; gap: 5px;">
+                        <span class="legend-color" style="background: #ff6b35; width: 10px; height: 10px; display: inline-block; border-radius: 2px;"></span>
+                        <span style="font-size: 0.8em;">Tools</span>
                     </div>
                 </div>
             </section>
